[gd_scene load_steps=2 format=3 uid="uid://cxdi5xg8i1esp"]

[ext_resource type="Script" path="res://scripts/enemy_spawner.gd" id="1_mu1j0"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_mu1j0")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="PathedMouseTimer1" type="Timer" parent="."]
wait_time = 16.0
autostart = true

[node name="SpeedUpTImer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[connection signal="timeout" from="PathedMouseTimer1" to="." method="_on_pathed_mouse_timer_1_timeout"]
[connection signal="timeout" from="SpeedUpTImer" to="." method="_on_speed_up_t_imer_timeout"]
